refactor:クラスの抽出
Refactor error handling with SalesOrderUploadErrorList

Introduce a dedicated `SalesOrderUploadErrorList` class to manage upload error handling more effectively. Updated related methods and tests to utilize the new class, improving code readability and maintainability.